feat: configure postbacks queue

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DB_CONNECTION=mongodb://localhost:27017
+RABBITMQ_URL="amqp://xjoghgby:lmCdQ6DYljz7oo7CE3Lq_QZyvC7tMwZh@chimpanzee.rmq.cloudamqp.com/xjoghgby"
+RABBITMQ_PORT=5672
